--- a/text1.html
+++ b/text1.html
@@ -16,13 +16,13 @@
             <!-- 小説の内容がここに追加されます -->
         </section>
         <nav class="pagination">
-            <button onclick="prevChapter()">前の章</button>
+            <button onclick="prevChapter()">前ページ</button>
             <span id="chapter-info">1/3</span>
-            <button onclick="nextChapter()">次の章</button>
+            <button onclick="nextChapter()">次ページ</button>
         </nav>
     </main>
     <footer>
-        <p>&copy; 2024 小説投稿サイト</p> <!-- フッター -->
+        <p>&copy; 2024 MUKIBUTSU ON THE GROUND</p> <!-- フッター -->
     </footer>
     <script src="script.js"></script> <!-- JavaScriptファイルをリンク -->
 </body>
